@@ -1,3 +1,8 @@
+	-- Implement more careful examination of begin/endRequest methods, to take
+	   into account the case where those methods exist on the JDBC driver Connection
+	   implementation, but not in the Connection interface of a pre-Java-9 JVM.
+	   We still support begin/endRequest in this case, but reflectively.
+	   Thanks Vlad Skarzhevskyy, khushboo11-dotcom!
 c3p0-0.10.0
 	-- A bit more testing
 c3p0-0.10.0-pre7
